--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
@@ -25,7 +25,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-12">
-                    <div class="heading-wrap text-center element-animate">
+                    <div class="heading-wrap text-center">
                         <div class="table-responsive">
                             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
