--- a/HotelFrontdesk/app/Resources/views/base.html.twig
+++ b/HotelFrontdesk/app/Resources/views/base.html.twig
@@ -29,8 +29,6 @@
     <script src="{{ asset('bundles/app/template/js/jquery.stellar.min.js') }}"></script>
     <script src="{{ asset('bundles/app/template/js/jquery.magnific-popup.min.js') }}"></script>
     <script src="{{ asset('bundles/app/template/js/magnific-popup-options.js') }}"></script>
-
-    <script src="{{ asset('bundles/app/template/js/main.js') }}"></script>
 </head>
 <body>
 <header role="banner">
@@ -67,7 +65,8 @@
                                href="{{ path('employee_index') }}">Employees</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if page == 'book' %} active {% endif %}" href="{{ path('reservation_index') }}">Book</a>
+                            <a class="nav-link {% if page == 'book' %} active {% endif %}"
+                               href="{{ path('reservation_index') }}">Book</a>
                         </li>
                         <li>
                             <p class="nav-link">User: {{ app.user.username }} </p>
@@ -135,7 +134,6 @@
 <!-- END footer -->
 
 {% block javascripts %}{% endblock %}
-
-
+<script src="{{ asset('bundles/app/template/js/main.js') }}"></script>
 </body>
 </html>
