--- a/HotelFrontdesk/app/Resources/views/base.html.twig
+++ b/HotelFrontdesk/app/Resources/views/base.html.twig
@@ -18,8 +18,12 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/fontawesome/css/all.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/fontawesome/css/brands.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/fontawesome/css/solid.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css"/>
+
+
 
     <script src="{{ asset('bundles/app/template/js/jquery-3.2.1.min.js') }}"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
     <script src="{{ asset('bundles/app/template/js/jquery-migrate-3.0.0.js') }}"></script>
     <script src="{{ asset('bundles/app/template/js/popper.min.js') }}"></script>
     <script src="{{ asset('bundles/app/template/js/bootstrap.min.js') }}"></script>
