--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
@@ -17,12 +17,6 @@
 
     <section class="site-section">
         <div class="container">
-            <div class="row mb-2">
-                <div class="col-md-12 text-left">
-                    <a class="btn btn-sm btn-primary" href="{{ path('employee_create') }}"><i
-                                class="fas fa-plus"></i></a>
-                </div>
-            </div>
             <div class="row align-items-center">
                 <div class="col-md-12">
                     <div class="heading-wrap text-center">
@@ -33,29 +27,23 @@
                                     <th>Name</th>
                                     <th>Address</th>
                                     <th>E-Mail</th>
-                                    <th></th>
+                                    <th>
+                                        <a href="{{ path('employee_create') }}"><i
+                                                    class="fas fa-plus-circle fa-lg"></i></a>
+                                    </th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 {% for employee in employees %}
                                     <tr>
                                         <td>{{ employee.name }}</td>
-                                        <td>{{ employee.address|nl2br }}</td>
+                                        <td>{{ employee.address }}</td>
                                         <td>{{ employee.email }}</td>
                                         <td>
-                                            <div class="dropdown">
-                                                <button class="btn-primary btn-sm text-white"
-                                                   data-toggle="dropdown" aria-haspopup="true"
-                                                   aria-expanded="false"><i class="fas fa-caret-down"></i></button>
-                                                <div class="dropdown-menu">
-                                                    <a class="dropdown-item" href="{{ path('employee_edit', {'id' : employee.id }) }}"><i
-                                                                class="fas fa-edit"></i> Edit</a>
-                                                    <a class="dropdown-item"
-                                                       href="{{ path('employee_delete', {'id' : employee.id}) }}"><i
-                                                                class="fas fa-trash text-danger"></i> Delete</a>
-                                                </div>
-
-                                            </div>
+                                            <a href="{{ path('employee_edit', {'id' : employee.id }) }}"><i
+                                                        class="fas fa-edit mr-2 fa-lg"></i> </a>
+                                            <a href="{{ path('employee_delete', {'id' : employee.id}) }}"><i
+                                                        class="fas fa-trash  fa-lg text-danger"></i></a>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -78,4 +66,8 @@
                     stroke="#f4b214"/>
         </svg>
     </div>
+
+    <script type="text/javascript">
+        $('#dataTable').DataTable();
+    </script>
 {% endblock %}
